// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public world analysis projection > maps validated cross-last through the full public result 1`] = `
{
  "kinds": [
    "HISTORICAL_TRACE",
    "ROAD_ASSOCIATION",
    "TEMPORAL_EVENT",
  ],
  "profileHash": "sha256:9a762ad573653138378a9653e601ce33acb9eb614c3ec4719e5011642f477cce",
  "resultHash": "sha256:e26b7656cb51e4ffaf85598711077edf21a848a4f6db7c249e08b8fdf7136ecf",
}
`;

exports[`public world analysis projection > maps validated dwell through the full public result 1`] = `
{
  "kinds": [
    "HISTORICAL_TRACE",
    "TEMPORAL_EVENT",
  ],
  "profileHash": "sha256:ca79738731e67f0883d5fe529bdb965faee17d4b265fcf0f0c73b8bc1c3a775b",
  "resultHash": "sha256:89cd755684d378be63eebd05da77c46e9e45d0ed3c764cc05ce1c613f749e0cf",
}
`;

exports[`public world analysis projection > maps validated enter through the full public result 1`] = `
{
  "kinds": [
    "HISTORICAL_TRACE",
    "TEMPORAL_EVENT",
  ],
  "profileHash": "sha256:5cb28d0a694bccc3be5a82dc244b15dc8477946db2642f84cc456d479d3cef5c",
  "resultHash": "sha256:4dbfda14f89c604b591fa2e29f1501a0b3dec3f36866c3869e8260f4642d141e",
}
`;

exports[`public world analysis projection > maps validated exit through the full public result 1`] = `
{
  "kinds": [
    "HISTORICAL_TRACE",
    "TEMPORAL_EVENT",
  ],
  "profileHash": "sha256:4ad0437f2af47f1525a0ad8d4ae238b19d7b6239a9635633417a52b79baf41df",
  "resultHash": "sha256:5e7b38bb0108388afae160bbc0893043fb203b42f7ec522dbf83a3570d716f0f",
}
`;

exports[`public world analysis projection > maps validated map-match through the full public result 1`] = `
{
  "kinds": [
    "HISTORICAL_TRACE",
    "ROAD_ASSOCIATION",
  ],
  "profileHash": "sha256:d8d690aed5467be9ea47ac3e736a1b0f85ea1b19d8af4606178ad6349cae986a",
  "resultHash": "sha256:50c65ab7f1106fd51f86d292a4b015009156c3c65625a5006b33729b675d3410",
}
`;

exports[`public world analysis projection > maps validated metric-minimize-metric through the full public result 1`] = `
{
  "kinds": [
    "HISTORICAL_TRACE",
    "METRIC_RANKING",
    "ACTION_TARGET_CANDIDATE",
  ],
  "profileHash": "sha256:0866cc102cf0965ad0d7b65be51ae5b0c6d829dd6a5c482079e5205ce841148d",
  "resultHash": "sha256:74770f02447008158e5bed43b88f78a305384a14872b16c075beb51acea1257a",
}
`;

exports[`public world analysis projection > maps validated metric-shared-campus through the full public result 1`] = `
{
  "kinds": [
    "HISTORICAL_TRACE",
    "METRIC_RANKING",
    "ACTION_TARGET_CANDIDATE",
  ],
  "profileHash": "sha256:17b1b81ae6996210011ec338ee0ca7cf5c2596ff95cd13a862d05e05851b78df",
  "resultHash": "sha256:9410482cc722d7f5b17909d5ef3fddccf5fbeb19a684d41ae2191767db6b0199",
}
`;

exports[`public world analysis projection > maps validated pass_near through the full public result 1`] = `
{
  "kinds": [
    "HISTORICAL_TRACE",
    "TEMPORAL_EVENT",
  ],
  "profileHash": "sha256:c10666eaadd1b40e40bfac9d7b173ff8ad25defed90fb2662171557ede3dd913",
  "resultHash": "sha256:3fd8a7ea762850fdc8d4bebcccc6c5bcbab1e149961e9f10407bf0e3b9d4ae3a",
}
`;

exports[`public world analysis projection > maps validated stop through the full public result 1`] = `
{
  "kinds": [
    "HISTORICAL_TRACE",
    "TEMPORAL_EVENT",
  ],
  "profileHash": "sha256:d53b7ca52c60a410fbcf9116d54e4300d3f6fe85bacc5597ae8ba8a5ed43ec96",
  "resultHash": "sha256:84cc4e673917808d969c05100ee166a2822cbba3abc8bb69f5af7329e0eda87e",
}
`;
